# cartesia-quickstart

./: AGENTS.md  docs.md
.claude/agents/: doc-ingestion-assistant.md
meet-zubin/: .gitignore  README.md  cartesia.toml  chat_node.py  config.py  main.py  plan.md  pyproject.toml  tools.md  tools.py
simple-chat-example/: cartesia.toml  chat_node.py  config.py  main.py  pyproject.toml  test_basic_chat.py
simple-chat-example/.cartesia/: config.toml
